2005-05-25  Derek Price  <derek@ximbiot.com>

	* glob_.h: Simplify <sys/cdefs.h> include and GLIBC macro use.  Replace
	use of defined _LIBC with !defined GLOB_PREFIX.  Restore some GLIBC
	stuff we don't care about anyhow.  Separate some #defines into their
	own section for clarity.
	(__glob_pattern_p): Move this definition...
	* glob.c (__glob_pattern_p): ...here.
	(HAVE_D_TYPE): Remove this macro for simplicity's sake.
	(HAVE__POSIX_GETPWNAM_R): Ditto.
	* getlogin_r.c, getlogin_r.h: Update from GNULIB.
	
2005-05-25  Derek Price  <derek@ximbiot.com>

	* glob.c: Remove HAVE_GETLOGIN_R complexity in favor of the GNULIB
	getlogin_r module.  Redefine "struct_stat64" rather than "stat64" to
	avoid macro collisions on Solaris.
	* getlogin_r.c, getlogin_r.h: New files from GNULIB.

2004-05-24  Conrad T. Pino  <Conrad@Pino.com>

	* libcvs.dsp: Add files "canonicalize.c", "cycle-check.c",
	"canonicalize.h", "cycle-check.h", "dev-ino.h", "glob.h", "mempcpy.h",
	"path-concat.h", "stat-macros.h" and "strdup.h" to project.
	* libcvs.dep, libcvs.mak: Regenerated for "libcvs.dsp" change.

2005-05-24  Conrad T. Pino  <Conrad@Pino.com>

	* glob_.h: Remove "struct stat;" forward declaration and update comment.

2005-05-24  Conrad T. Pino  <Conrad@Pino.com>

	* glob_.h: "#include <sys/stat.h>" for Solaris "#define stat stat64"
	case.

2005-05-24  Derek Price  <derek@ximbiot.com>

	* stat.c: Use system stat & lstat functions in this file.
	* system.h (CVS_STAT, CVS_LSTAT): Remove these macros.

2005-05-24  Derek Price  <derek@ximbiot.com>

	* Makefile.am (BUILT_SOURCES, EXTRA_DIST, MAINTAINERCLEANFILES): Add
	getdate.c due to automake bug.

2005-05-24  Derek Price  <derek@ximbiot.com>

	* glob_.h, glob.c: Don't attempt to handle 64 bit file information
	explicitly when not compiling as part of glibc.

2005-05-23  Derek Price  <derek@ximbiot.com>

	* canonicalize.c, canonicalize.h, cycle-check.c, cycle-check.h,
	dev-ino.h, path-concat.c, path-concat.h: New files from GNULIB.
